grammar.js
    stylesheet: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.declaration,
        $.rule_set,
        $.import_statement,
        $.media_statement,
        $.charset_statement,
        $.namespace_statement,
        $.keyframes_statement,
        $.supports_statement,
        $.use_statement,
        $.forward_statement,
        $.apply_statement,
        $.mixin_statement,
        $.include_statement,
        $.if_statement,
        $.each_statement,
        $.for_statement,
        $.while_statement,
        $.function_statement,
        $.error_statement,
        $.warn_statement,
        $.debug_statement,
        $.at_rule,
        $.placeholder
      ),

    // Statements

    media_statement: ($) =>
      seq(
        "@media",
        sep1(",", $._query),
        $.block
      ),

    at_rule: ($) => seq(
      $.at_keyword,
      sep(",", $._query),
      choice(";", $.block)
    ),

    parameters: ($) => seq("(", sep1(",", $.parameter), ")"),

    parameter: ($) =>
      seq(
        alias($.variable_identifier, $.variable_name),
        optional(seq(":", alias($._value, $.default_value)))
      ),

    mixin_statement: ($) =>
      seq("@mixin", alias($._identifier, $.name), optional($.parameters), $.block),

    placeholder: ($) => (
      seq(
        alias($.placeholder_declaration_selector, $.placeholder_selector),
        $.block
      )
    ),

    at_root_statement: ($) =>
      seq(
        "@at-root",
        $.selectors,
        $.block
      ),

    debug_statement: ($) => seq("@debug", $._value, ";"),

    // Rule sets

    rule_set: ($) => seq($.selectors, $.block),

    selectors: ($) => sep1(",", choice($._selector)),

    block: ($) =>
      seq(
        "{",
        repeat($._block_item),
        optional(
          alias($.last_declaration, $.declaration)
        ),
        "}"
      ),

    _block_item: ($) =>
      choice(
        $.declaration,
        $.rule_set,
        $.import_statement,
        $.media_statement,
        $.charset_statement,
        $.namespace_statement,
        $.keyframes_statement,
        $.supports_statement,
        $.mixin_statement,
        $.include_statement,
        $.extend_statement,
        $.if_statement,
        $.each_statement,
        $.for_statement,
        $.while_statement,
        $.function_statement,
        $.return_statement,
        $.at_root_statement,
        $.error_statement,
        $.warn_statement,
        $.debug_statement,
        $.at_rule,
        alias($.content_at_rule, $.at_rule)
      ),

    // Selectors

    _selector: ($) =>
      choice(
        $.universal_selector,
        alias($._identifier_with_interpolation, $.tag_name),
        $.class_selector,
        $.nesting_selector,
        $.pseudo_class_selector,
        $.pseudo_element_selector,
        $.id_selector,
        $.attribute_selector,
        $.string_value,
        $.child_selector,
        $.descendant_selector,
        $.sibling_selector,
        $.adjacent_sibling_selector,
        $.namespace_selector,
        $.interpolation
      ),

    placeholder_selector: ($) =>
      prec(
        1,
        seq(
          '%',
          $._no_whitespace,
          alias($._identifier_with_interpolation, $.placeholder_name)
        )
      ),

    class_selector: ($) =>
      prec(
        1,
        seq(
          optional($._selector),
          choice(
            seq(".", $._no_whitespace),
            $.nesting_selector
          ),
          alias($._identifier_with_interpolation, $.class_name)
        )
      ),

    declaration: ($) =>
      choice(
        // Variable
        seq(
          alias($.variable_identifier, $.variable_name),
          ':',
          optional($.scope_annotation),
          $._value,
          repeat(seq(optional(","), $._value)),
          optional($.default),
          ';'
        ),

        // Property
        seq(
          alias($._identifier_with_interpolation, $.property_name),
          ':',
          $._value,
          repeat(
            seq(optional(","), $._value)
          ),
          optional($.important),
          ';'
        )
      ),

    // Only seems to be used to declare properties and not variables.
    important: ($) => "!important",
    default: ($) => "!default",

    // Media queries

    _query: ($) =>
      choice(
        alias($._identifier_with_interpolation, $.keyword_query),
        $.feature_query,
        $.binary_query,
        $.unary_query,
        $.selector_query,
        $.parenthesized_query
      ),

    _value: ($) =>
      prec(
        -1,
        choice(
          alias($._identifier_with_interpolation, $.plain_value),
          $.variable_module,
          alias($.variable_identifier, $.variable_value),
          $.boolean_value,
          $.null_value,
          alias($._plain_value, $.plain_value),
          $.color_value,
          $.integer_value,
          $.float_value,
          $.string_value,
          $.grid_value,
          $.binary_expression,
          $.map_value,
          $.parenthesized_value,
          $.call_expression,
          alias($.nesting_selector, $.nesting_value)
        )
      ),

    // Since a `url` function allows a greater breadth of unquoted characters
    // than would be allowed in any other context, we need a version of
    // `_value` that is allowed to exist inside of `url`. Lots of these would
    // be nonsensical, but they still compile.
    boolean_value: ($) => choice("true", "false"),
    null_value: ($) => "null",

    parenthesized_value: ($) => seq("(", $._value, ")"),

    map_value: ($) => seq("(", sep(',', $.map_pair), ")"),

    map_pair: ($) => prec(2,
      seq(
        field('key', $._value),
        ':',
        field('value', $._value)
      )
    ),

    color_value: ($) => seq("#", token.immediate(/[0-9a-fA-F]{3,8}/)),

    string_value: ($) =>
      choice(
        $._single_quoted_string_value,
        $._double_quoted_string_value
      ),

    _single_quoted_string_value: ($) =>
      seq(
        "'",
        repeat(
          choice(
            $._single_quoted_string_segment,
            $.interpolation
          )
        ),
        "'"
      ),

    _double_quoted_string_value: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._double_quoted_string_segment,
            $.interpolation
          )
        ),
        '"'
      ),

    // Only used in certain places where SCSS will tolerate an unquoted string
    // that would normally be ambiguous, like a URL.
    integer_value: ($) =>
      seq(
        token(
          seq(
            optional(choice("+", "-")),
            /\d+/
          )
        ),
        optional($.unit)
      ),

    float_value: ($) =>
      seq(
        token(
          seq(
            optional(choice("+", "-")),
            /\d*/,
            choice(
              seq(".", /\d+/),
              seq(/[eE]/, optional("-"), /\d+/),
              seq(".", /\d+/, /[eE]/, optional("-"), /\d+/)
            )
          )
        ),
        optional($.unit)
      ),

    unit: ($) => token.immediate(/[a-zA-Z%]+/),

    grid_value: ($) => seq(
      '[',
      sep1(',', $._value),
      ']'
    ),

    _expression: ($) =>
      choice(
        $.call_expression,
        $.binary_expression
      ),

    call_expression: ($) => (
      choice(
        // Special case for a function named `url`.
        seq(
          field('name', alias('url', $.function_name)),
          field('arguments', alias($.arguments_for_url, $.arguments)),
        ),
        seq(
          optional(
            seq(
              field('module', alias($._identifier, $.module)),
              token.immediate('.'),
              $._no_whitespace
            )
          ),
          field('name', alias($._identifier, $.function_name)),
          field('arguments', $.arguments)
        )
      )
    ),

    binary_expression: ($) =>
      prec.left(
        seq(
          $._value,
          // NOTE: Technically, `/` should only be allowed in binary
          // expressions if we're inside a `calc`. They're not a part of Dart
          // Sass, but even tree-sitter-css still treats them as binary
          // operators in places where they aren't (e.g., grid value syntax),
          // so we'll leave this the way it is for now.
          choice("+", "-", "*", "/", "==", "<", ">", "!=", "<=", ">="),
          $._value
        )
      ),

    arguments: ($) =>
      seq(
        token.immediate("("),
        sep(
          choice(",", ";"),
          repeat1($._value)
        ),
        ")"
      ),

    _identifier: ($) => /((--|-?[a-zA-Z_]))([a-zA-Z0-9-_])*/,

    variable_module: ($) => (
      seq(
        field('module', alias($._identifier, $.module)),
        token.immediate('.'),
        $._no_whitespace,
        field('value', alias($.variable_identifier, $.variable_value))
      )
    ),

    at_keyword: ($) => /@[a-zA-Z-_]+/,

    comment: ($) => token(seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),

    interpolation: ($) =>
      seq(
        "#{",
        choice(
          $._value,
          $._expression,
        ),
        "}"
      ),

    _identifier_with_interpolation: ($) => prec.left(1,
        repeat1(
          choice(
            $._identifier,
            $.interpolation
          )
        )
      ),
